Basic functioning program

--- a/third.html
+++ b/third.html
@@ -8,8 +8,7 @@
 <body>
     <form action="./share_product" method="POST" id="PutProduct">
         <h1>Submit Product Details:</h1>
-        <input type="text" name="first_name" class="form-control" placeholder="Enter First Name...">
-        <input type="text" name="last_name" class="form-control" placeholder="Enter Last Name...">
+        <input type="text" name="name" class="form-control" placeholder="Enter Name...">
         <input type="text" name="product" class="form-control" placeholder="Enter Product Name...">
         <input type="text" name="description" class="form-control" placeholder="Enter Product Description...">
         <input type="text" name="price" class="form-control" placeholder="Enter Product Price...">
