Additional updates to functionality

--- a/first.html
+++ b/first.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="margin-top:45vh;display:flex;flex-direction:row;justify-content:center;gap:20vw">
     <form action="./second.html">
-        <input type="submit" value="Find a product" />
+        <input style="background-color:rgb(154, 154, 231);width:20vw;height:10vh" type="submit" value="Find a product" />
     </form>
     <form action="./third.html">
-        <input type="submit" value="Share a product" />
+        <input style="background-color:lightpink;width:20vw;height:10vh" type="submit" value="Share a product" />
     </form>
     
 </body>
