--- a/new.html
+++ b/new.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1><%= test %></h1>
+<body style="margin-top:20vh;background-color:lightgreen;text-align:center">
+    <h1>Company Name: <%= name %></h1>
+    <h2>Price: <%= price %>$</h2>
+    <img src=<%= image %>>
+    <p> Description: <%= description %></p>
+    <form action="./first.html">
+        <input type="submit" value="Go Back" />
+    </form>
     
 </body>
 </html>
