--- a/second.html
+++ b/second.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color:lightskyblue;margin-top:35vh;display:flex;flex-direction:row;justify-content:center;gap:20vw">
     <form action="./find_product" method="POST" id="GetProduct">
         <h1>Enter a Product</h1>
         <input type="text" name="product" class="form-control" placeholder="Enter Product Name...">
