--- a/third.html
+++ b/third.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color:lightcoral;margin-top:35vh;display:flex;flex-direction:row;justify-content:center;gap:20vw">
     <form action="./share_product" method="POST" id="PutProduct">
         <h1>Submit Product Details:</h1>
         <input type="text" name="name" class="form-control" placeholder="Enter Name...">
         <input type="text" name="product" class="form-control" placeholder="Enter Product Name...">
         <input type="text" name="description" class="form-control" placeholder="Enter Product Description...">
         <input type="text" name="price" class="form-control" placeholder="Enter Product Price...">
+        <input type="text" name="photo" class="form-control" placeholder="Enter Product Photo URL...">
         <button type="submit">Submit</button>
     </form>
 </body>
